--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@
 # Required Values 必选配置
 ##########################
 # API_ID and API_KEY, get from: https://my.telegram.org/apps # API_ID 和 API_KEY, 从 https://my.telegram.org/apps 获取
-API_ID=1234567
-API_KEY=abcdefg2hijk5lmnopq8rstuvwxyz9
+API_ID=10078984
+API_KEY=a2e3ee9e928b7f65b6d346d1cb83b741
 # Telegram bot token, from @botfather # TG 机器人的 Token, 自 @botfather 获取
-BOT_TOKEN=123456789:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
+BOT_TOKEN=6759277921:AAHnFY7vn11fatcBcez_BA3TJY7iHnjjl1o
 # Allowed User's ids, use comma separation, set "*" will allow everyone # 允许的用户 id ，使用逗号分隔，设置为 '*' 则所有人可用
-ALLOWED_USER_IDS=112113115,567568569,998997996
+ALLOWED_USER_IDS=*
 # SuperAdmin User's ids, use comma separation, if ALLOWED_USER_IDS has been setted to "*", this is required  # 允许的超级用户 id ，使用逗号分隔，如果已将 ALLOWED_USER_IDS 设置为 "*", 那么必须设置此项
-SUPER_USER_IDS=112113115,567568569
+SUPER_USER_IDS=6342937226
 
 # The cookie file path. You can chat with AI without Cookie, but Image generation still needs Cookie. # cookie 数据文件，可以不设置，但是无法使用图片生成
 COOKIE_FILE=./cookie.json
@@ -23,7 +23,7 @@ PROXY_BING=""
 # Supports magic word: %user_id% (Will replaced with the user's id who acceessed).  # 魔法变量 %user_id% ，会被自动替换成访问的用户的 id
 NOT_ALLOW_INFO="⚠️You(%user_id%) are not authorized to use this bot⚠️"
 # The default bot name, show in welcome/help message # 默认机器人名字，在发送欢迎/帮助信息时用
-BOT_NAME="PyroEdgeGpt"
+BOT_NAME="everyallai009bot"
 # Set suggest message mode. Available value: "callbackquery", "replykeyboard", "copytext" # 设置 bot 建议消息模式，可选值 "callbackquery", "replykeyboard", "copytext"
 SUGGEST_MODE=callbackquery
 # Set Bing AI temperature, Available value: "creative", "balanced", "precise" # 设置 Bing AI 聊天温度，可用值: "creative", "balanced", "precise"
